fix: overflow inputs

--- a/src/features/application-form/ui/ApplicationForm/styles.module.css
+++ b/src/features/application-form/ui/ApplicationForm/styles.module.css
@@ -2,6 +2,15 @@
   width: 100%;
 }
 
+.title {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+}
+
 .emptyTitle {
   color: var(--gray-text);
 }
