--- a/src/pages/application-manage/ui/ApplicationManage/styles.module.css
+++ b/src/pages/application-manage/ui/ApplicationManage/styles.module.css
@@ -6,14 +6,11 @@
 
 .content {
   display: flex;
+  align-items: stretch;
   gap: 32px;
 
   @media (max-width: 700px) {
     flex-direction: column;
     gap: 22px;
   }
-}
-
-.card {
-  height: 601px !important;
 }
