--- a/src/widgets/application-card/ui/ApplicationCard/styles.module.css
+++ b/src/widgets/application-card/ui/ApplicationCard/styles.module.css
@@ -8,13 +8,14 @@
   padding: 24px;
   border-radius: 12px;
 
-  &.rootFullHeight {
-    height: auto;
-  }
-
   @media (max-width: 700px) {
     height: 200px;
     padding: 16px;
+  }
+
+  &.rootFullHeight {
+    min-height: 500px;
+    height: auto;
   }
 }
 
